src/main.css
/* ... */
.project-pop .hero-text {
  color: var(--colour-proj-main);
}
.project-pop .standout-text {
  margin: var(--padding) 0;
}
.project-pop h1,
.project-pop h2 {
  font-weight: var(--bold);
}

.project-pop img {
  width: 100%;
}
.project-pop .image-container {
  margin-bottom: var(--padding);
  display: grid;
  gap: var(--gap);
  justify-items: right;
}
.project-pop .image-container h6 {
  opacity: 0.6;
  font-weight: var(--regular);
  font-style: italic;
}

/* ________________PROJECT INNERS__________________ */

.three-col {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: calc(var(--gap) * 2);
}
.three-col .item-list {
  text-align: center;
  align-items: center;
  padding: var(--inner-padding);
}
.three-col .img-cont {
  background-color: var(--colour-proj-light);
  width: calc(100% + calc(var(--inner-padding) * 2));
  aspect-ratio: 1/1;
  border-radius: var(--corner-large);
  padding: var(--inner-padding);
  display: grid;
  align-items: center;
  justify-items: center;
  margin: 0 calc(var(--inner-padding) * -1);
  margin-bottom: var(--gap);
}
.three-col p, .three-col h3 {
  padding: 0 var(--gap);
}

.img-info-list {
  display: grid;
  grid-template-columns: 12em auto;
}

.img-info-list img {
  z-index: 1;
  height: 100%;
}
.img-info-list ul {
  margin: var(--padding) 0;
  margin-left: calc(var(--padding) * -2);
}
.img-info-list ul li {
  background-color: var(--colour-proj-light);
  margin-bottom: calc(var(--gap) / 2);
  padding: var(--inner-padding);
  border-radius: var(--corner-small);
}
.img-info-list ul li p {
  padding-left: calc(var(--padding) * 2);
}
.img-info-list ul > :last-child {
  margin-bottom: unset;
}

.case-study .info {
  padding: var(--padding-large) 0;
}



/* ________________MODAL__________________ */

.modal {
  position: relative;
  width: 88vw;
  max-width: 50em;
  background-color: var(--colour-white);
  --colour-text: var(--colour-purple);
  padding: calc(var(--inner-padding) / 1.2);
  display: grid;
  gap: calc(var(--gap) * 2);
  border-radius: var(--corner-large);
  max-height: 74vh;
  height: 100%;
  grid-template-rows: min-content auto;
  transition: transform 0.3s ease;
}
.inner-modal {
  overflow-y: auto;
}
.modal button.icon-round {
  margin-top: calc(var(--gap) * -0.7);
  margin-right: calc(var(--gap) * -0.7);
}
.modal .modal-topbar {
  align-items: center;
}
.modal-behind {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: var(--z-propop);
  display: grid;
  align-items: center;
  align-content: center;
  justify-content: center;
  background-color: rgba(0,0,0,0.3);
  opacity: 0;
  transition: opacity 0.3s ease;
}
.modal-behind[data-anim="true"] {
  opacity: 1;
}
.modal-behind .modal {
  transform: translateY(20px);
}
.modal-behind[data-anim="true"] .modal {
  transform: translateY(0);
}

/* ________________MAP__________________ */

.map {
  width: 100%;
  position: relative;
}

.map .actual-map-outer {
  width: 100%;
  height: 100%;
  position: absolute;
}

.map .actual-map {
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: var(--z-map-inactive);
  left: calc(var(--padding-large) * -1);
  transition: transform 1s ease;
  display: grid;
  align-items: center;
}

.map .actual-map[data-active="true"] {
  z-index: var(--z-map-active);
}

.map .actual-map[data-zoom="true"] {
  /* transform: scale(1.5) translateX(-15%); */
}

.map .map-inner {
  position: relative;
}

.map .marker {
  width: 2em;
  position: absolute;
  transform: translateX(-45%) translateY(-120%);
  z-index: calc(var(--z-map-active) + 1);
}
.map .marker svg path {
  pointer-events: none;
}

.map .marker,
.map .actual-map svg path[data-active="true"] {
  /* cursor: help; */
}

.map .marker:hover svg {
  fill: var(--colour-white);
  
}
.map .marker[data-active="true"] > svg {
  transform: scale(1);
}
.map .marker > svg {
  fill: var(--colour-lightgrey);
  transition: transform 0.5s ease;
  transform: scale(0);
}

.map .actual-map svg {
  width: 100%;
  fill: var(--colour-darkgrey);
}
.map .actual-map svg path {
  transition: fill 0.6s ease;
}

.map-bottom-text {
  position: absolute;
  bottom: var(--padding-large);
  width: 100%;
  max-width: 60em;
  padding-left: var(--padding-large);
  padding-right: var(--padding-large);
  z-index: var(--z-info);
}
.map-top-text {
  position: absolute;
  top: var(--padding-large);
  width: 100%;
  max-width: 60em;
  padding-left: var(--padding-large);
  padding-right: var(--padding-large);
  z-index: var(--z-info);
}


/* ________________HOVER__________________ */

@media not all and (hover: none) {
  button:hover {
    background-color: var(--colour-white);
    color: var(--colour-black);
  }
  
  a.text:hover {
    /* font-weight: bolder; */
    text-decoration: underline;
    background-color: rgba(210,100,170,0.4);
  }
}

/* ________________RESP__________________ */

@media screen and (max-width: 40em) {

  :root {
    --padding-large: 1.5em;
  }
  h1.hero {
    font-size: 2.5em;
  }
  h2 {
    font-size: 1.8em;
  }
  h3 {
    font-size: 1.3em;
  }
  
  section.center-title.center {
    text-align: left;
  }
  
  nav.side-progress {
    right: calc(var(--padding) / 2);
  }
  
}

.mobile-map-div {
  width: 100%;
  overflow: hidden;
}
.mobile-map-div svg {
  width: 300%;
}

